--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -1,9 +1,14 @@
+.row {
+  display: flex;
+}
 
-.example-card {
-    max-width: 400px;
+.column {
+  flex: 50%;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
   }
-  
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  }
+}
