--- a/src/app/signin/signin.component.scss
+++ b/src/app/signin/signin.component.scss
@@ -22,4 +22,9 @@ $white: rgb(250, 250, 250);
         width: 100%;
         height: 25px;
     }
+
+    button {
+        display: flex;
+        margin: 0 auto;
+    }
 }
