--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -3,8 +3,10 @@
     <h1> Sign In </h1> <br> <br>
 
     <label class="label-input-description"><strong>Username</strong></label> <br>
-    <input> <br> <br> <br>
+    <input name="username" type="text" [(ngModel)]="username"> <br> <br> <br>
 
     <label class="label-input-description"><strong>Password</strong></label> <br>
-    <input> <br> <br> <br>
+    <input name="password" type="password" [(ngModel)]="password"> <br> <br> <br>
+
+    <button (click)="onSignIn()">Sign In</button>
 </form>
