--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,36 @@
 
-<div class="mcontainer">
-    <div class="logo-container">
-        <img class="logo" src="../assets/logo.png">
+<nav class="navbar navbar-expand-lg navbar-dark primary-color">
+
+    <!-- Navbar brand -->
+    <a class="navbar-brand" href="#" routerLink="/"><img id="logo" src="../assets/logo.png"></a>
+  
+    <!-- Collapse button -->
+    <div class="navbar-right-buttons">
+        <a class="nav-link" href="#" routerLink="/cart"><img id="cart" src="../assets/cart.png"></a>
+        <a class="nav-link" href="#" routerLink="/signin">Sign In</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+            aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </div>
-    <div class="navbar-container">
-        <nav class="right-top-navbar">
-            <ul>
-                <li> <a class="nav-item" href="#" routerLink="/signin">Sign In</a> </li>
-            </ul>
-        </nav>
-        <nav class="right-bottom-navbar">
-            <ul>
-                <li> <a class="nav-item" href="#" routerLink="/">Home</a> </li>
-                <li> <a class="nav-item" href="#" routerLink="/products">Products</a> </li>
-            </ul>
-        </nav>
+  
+    <!-- Collapsible content -->
+    <div class="collapse navbar-collapse" id="basicExampleNav">
+  
+      <!-- Links -->
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" routerLink='/products'>Products</a>
+        </li>
+      </ul>
     </div>
-</div>
+  
+</nav>
 
 <div class="container">
     <router-outlet></router-outlet>
