--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,82 +1,29 @@
 
 $primaryColor: #013369;
 $white: rgb(250, 250, 250);
+$gold: rgb(255, 215, 0);
 
-body {
-    background: darken($color: $white, $amount: 5%);
+.primary-color {
+    background: $primaryColor;
 }
 
-.mcontainer {
-    background: $primaryColor;
-    height: 20vh;
-    width: 100%;
+.navbar-right-buttons {
     display: flex;
+    float: right;
+}
 
-    .logo-container {
-        width: 10%;
-        height: 100%;
-        position: relative;
+#logo {
+    margin: 0 auto;
+    height: 25px;
+    width: 25px;
+}
 
-        .logo {
-            max-width: 100%;
-            max-height: 90%;
-            vertical-align: middle;
-            position: absolute;
-            top: 0; bottom: 0;
-            left: 0; right: 0;
-            margin: auto;
-        }
-    }
+#cart {
+    margin: 0 auto;
+    height: 30px;
+    width: 30px;
+}
 
-    .navbar-container {
-        height: 100%;
-        width: 90%;
-        margin: 0;
-        padding: 0;
-
-        li {
-            text-align: center;
-            display: flex;  
-            align-items: center;
-            margin: 0 5px 0 5px;
-        }
-
-        ul li {
-            list-style: none;
-            justify-content: center;
-        }
-
-        ul {
-            list-style-type: none;
-            display: flex;
-        }
-
-        .right-top-navbar {
-            height: 50%;
-            width: 100%;
-            display: flex;
-        }
-
-        .right-bottom-navbar {
-            height: 50%;
-            width: 100%;
-            display: flex;
-        }
-
-        .nav-item {
-            padding: 1vh;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 1rem;
-            border-radius: 10px;
-            color: $primaryColor;
-            background: $white;
-
-            &:hover {
-                background: darken($primaryColor, 5%);
-                color: $white;
-            }
-
-        }
-    }
+.nav-link {
+    color: $gold;
 }
