--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,20 +1,20 @@
-<mat-card class="selling-card">
-        <mat-card-header>
-            <div mat-card-avatar class="selling-card-header-image">
-                <img src="../../assets/logo.png">
-            </div>
-            <mat-card-title> Lakers Jersey </mat-card-title>
-            <mat-card-subtitle> $80.00 </mat-card-subtitle>
-        </mat-card-header>
-        <div class="selling-card-img-div">
-            <img class="selling-card-item-img" src="../../assets/lakers-jersey.jpeg" alt="Photo of a Shiba Inu">
-        </div>
-        <mat-card-content>
-            <p>
-                Brand new Lakers jersey of Lebron James #23.
-            </p>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-button>BUY</button>
-        </mat-card-actions>
-</mat-card>
+
+<div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="../../assets/lakers-jersey.jpeg" alt="Card image cap">
+    <div class="card-body">
+        <h5 class="card-title">Lakers Jersey</h5>
+        <p class="card-text">
+            Brand new Lakers jersey of Lebron James #23.
+            Brand new Lakers jersey of Lebron James #23.
+            Brand new Lakers jersey of Lebron James #23.
+            Brand new Lakers jersey of Lebron James #23.
+            Brand new Lakers jersey of Lebron James #23.
+            Brand new Lakers jersey of Lebron James #23.
+            Brand new Lakers jersey of Lebron James #23.
+            Brand new Lakers jersey of Lebron James #23.
+        </p>
+
+        <a href="#" routerLink="/productDetails" class="btn btn-primary center details" (click)="test()">Product Details</a>
+        <a (click)="addProductToCart()" class="btn btn-primary center"><img src="../../assets/cart.png"> <span id="productPrice"> $80.00</span> </a>
+    </div>
+</div>
