--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,5 @@
-<div class="row">
-    <div class="column">
-        <div class="item">
-            <app-card></app-card>
-        </div>
-        <div class="item">
-            <app-card></app-card>
-        </div>
-    </div>
-
-    <div class="column">
-        <div class="item">
-            <app-card></app-card>
-        </div>
-        <div class="item">
-            <app-card></app-card>
-        </div>
-    </div>
+<div class="jumbotron">
+        <h1 class="display-4">Welcome to B</h1>
+        <p class="lead">We make it easy to buy what you need and sell what you don't!</p>
+        <hr class="my-4">
 </div>
-
-
