--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,19 +1,26 @@
-<div class="row">
-    <div class="column">
-        <div class="item">
-            <app-card></app-card>
-        </div>
-        <div class="item">
-            <app-card></app-card>
-        </div>
+<div class="wrapper">
+    <div>
+        <app-card class="item"></app-card>
     </div>
-
-    <div class="column">
-        <div class="item">
-            <app-card></app-card>
-        </div>
-        <div class="item">
-            <app-card></app-card>
-        </div>
+    <div>
+        <app-card class="item"></app-card>
     </div>
-</div>
+    <div>
+        <app-card class="item"></app-card>
+    </div>
+    <div>
+        <app-card class="item"></app-card>
+    </div>
+    <div>
+        <app-card class="item"></app-card>
+    </div>
+    <div>
+        <app-card class="item"></app-card>
+    </div>
+    <div>
+        <app-card class="item"></app-card>
+    </div>
+    <div>
+        <app-card class="item"></app-card>
+    </div>
+ </div>
