--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -1,14 +1,41 @@
-.row {
-  display: flex;
+$cardHeight: 535px;
+
+.item {
+  padding: 5px 5px 5px 5px;
+  display: table;
+  margin: 0 auto;
+  width: 25%;
 }
 
-.column {
-  flex: 50%;
+.wrapper {
+  left: 0;
+  right: 0;
+  position: absolute;
+  width: 100%;
+  height: 90%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto auto 1fr 1fr 1fr auto auto;
+  height: calc(100vh - 10px);
+  grid-gap: 10px;
 }
 
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
+/* Responsive layout - when the screen is less than 600px wide,
+ make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 1225px) {
+  .wrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 775px) {
+  .wrapper {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
