--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -14,7 +14,7 @@
             Brand new Lakers jersey of Lebron James #23.
         </p>
 
-        <a href="#" routerLink="/productDetails" class="btn btn-primary center details" (click)="test()">Product Details</a>
+        <a href="#" routerLink="/productDetails" class="btn btn-primary center details">Product Details</a>
         <a (click)="addProductToCart()" class="btn btn-primary center"><img src="../../assets/cart.png"> <span id="productPrice"> $80.00</span> </a>
     </div>
 </div>
