--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -5,7 +5,7 @@
     <img id="productImage" src="../../assets/lakers-jersey.jpeg"> 
 
     <br> <br>
-    <a (click)="addProductToCart()" class="btn btn-primary center"><img src="../../assets/cart.png"> <span id="productPrice"> $80.00</span> </a>
+    <a class="btn btn-primary center"><img src="../../assets/cart.png"> <span id="productPrice"> $80.00</span> </a>
 
     <div>
         <p>
